[package]
name = "ain-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
env_logger = "0.9"
jsonrpsee = { version = "0.12", features = ["http-server"] }
jsonrpsee-core = "0.12"
# jsonrpc-v2 = "0.11"
log = "0.4"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["rt-multi-thread"] }
tonic = "0.7"

[build-dependencies]
cxx-gen = "0.7"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = { version = "1.0", features = ["full"] }
prost-build = "0.10"
tonic-build = "0.7"
