[package]
name = "ain-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
env_logger = "0.9"
jsonrpsee = { version = "0.14", features = ["http-server"], git = "https://github.com/DeFiCh/jsonrpsee" }
jsonrpsee-core = { version = "0.14", git = "https://github.com/DeFiCh/jsonrpsee" }
jsonrpsee-types = { version = "0.14", git = "https://github.com/DeFiCh/jsonrpsee" }
# jsonrpc-v2 = "0.11"
log = "0.4"
num-traits = "0.2"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["rt-multi-thread"] }
tonic = "0.7"

[build-dependencies]
cxx-gen = "0.7"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = { version = "1.0", features = ["full"] }
prost-build = "0.10"
tonic-build = "0.7"
