[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
wasmtime-wasi = "0.38.1"
wasmtime-wasi-crypto = "0.38.1"
lazy_static = "1.4.0"
dashmap = "5.1.0"
