[package]
name = "dex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
anyhow = "1.0.53"
primitive-types = {git = "https://github.com/paritytech/parity-common.git"}